objects/Vosf_Survey_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Due_Date_Period__c</fullName>
        <label>Due Date Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Reminder_Period__c</fullName>
        <label>First Reminder Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invitation_Filters__c</fullName>
        <label>Invitation Filters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Second_Reminder_Period__c</fullName>
        <label>Second Reminder Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Completion_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Completion Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Reminder_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Reminder Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Invitation_Email_Template__c</fullName>
        <label>Survey Invitation Email Template</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Org_Base_URL__c</fullName>
        <label>Survey Org Base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Third_Reminder_Period__c</fullName>
        <label>Third Reminder Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Setting</label>
</CustomObject>